// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ActionControls should correctly render controls for drawing annotations 1`] = `
<div
  className="ba-action-controls"
>
  <DrawingControls
    canDelete={true}
    onDelete={[MockFunction]}
  />
</div>
`;

exports[`components/ActionControls should not render controls for highlight comment annotations 1`] = `
<div
  className="ba-action-controls"
>
  <HighlightControls
    canAnnotate={true}
    canDelete={true}
    onCommentClick={[MockFunction]}
    onCreate={[MockFunction]}
  />
</div>
`;

exports[`components/ActionControls should not render controls for plain highlight annotations 1`] = `
<div
  className="ba-action-controls"
>
  <HighlightControls
    canAnnotate={true}
    canDelete={true}
    onCommentClick={[MockFunction]}
    onCreate={[MockFunction]}
  />
</div>
`;
